cabal-version:      2.2
-- Reasons for having a separate package for docs:
-- * Leaner main package and better modularity
-- * This package can be forked out as an independent package
-- * We can have code examples in haddock with more dependencies
-- * Documentation can be released independent of the library
-- * We do not want too many doc modules in the main library
name:               streamly-docs
version:            0.8.2
synopsis:           Documentation for Streamly
description:        Documentation for Streamly
build-type:         Simple

-------------------------------------------------------------------------------
-- Library
-------------------------------------------------------------------------------

extra-doc-files:
  Roadmap.link
  *.md

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:    .
  exposed-modules:
    Tutorial
    ConcurrentStreams
    ReactiveProgramming

  build-depends:
      base              >= 4.9   &&  < 4.17
    , transformers      >= 0.4   && < 0.6
    , streamly
