cabal-version:      2.2
-- Reasons for having a separate package for docs:
-- * Leaner main package and better modularity
-- * This package can be forked out as an independent package
-- * We can have code examples in haddock with more dependencies
-- * Documentation can be released independent of the library
-- * We do not want too many doc modules in the main library
name:               streamly-docs
version:            0.10.0
synopsis:           Documentation for Streamly
description:        Documentation for Streamly
build-type:         Simple

-------------------------------------------------------------------------------
-- Library
-------------------------------------------------------------------------------

extra-doc-files:
  *.md
  User/*.md
  User/Tutorials/*.md
  User/Tutorials/*.link
  User/HowTo/*.md
  User/HowTo/*.link
  User/Explanatory/*.md
  User/Explanatory/streaming-pradigms.rst
  User/Project/*.md
  User/Project/*.link
  User/Project/ApiChangelogs/0.8.3.txt
  User/Project/ApiChangelogs/0.8.3-0.9.0.txt
  Developer/*.png
  Developer/*.md
  Developer/*.link
  Developer/*.rst

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:    .
  exposed-modules:
    User.Tutorials.Tutorial
    User.Tutorials.ConcurrentStreams
    User.Tutorials.ReactiveProgramming

  build-depends:
      base              >= 4.9   &&  < 4.20
    , transformers      >= 0.4   && < 0.7
    , streamly
    , streamly-core
