cabal-version:      2.4
name:               streamly-targets
version:            0.1.0.0

library
    hs-source-dirs:   .
    exposed-modules: Targets
    ghc-options: -Wall
    build-depends:    base
                    , bench-report
                    , containers
    default-language: Haskell2010
