cabal-version:      2.2
name:               unpacked-map-int
version:            0.1.0
build-type:         Simple

-- we have to provide a module in another library that matches the signature 
library
  default-language: Haskell2010
  hs-source-dirs: .
  exposed-modules: KeyInt
  build-depends: base
